# DataSweeper

./: pyproject.toml  requirements.txt
src/datasweeper/: __init__.py  app.py
