[project]
name = "datasweeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DoniaBatool", email = "donia1510aptech@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.42.2",
]

[project.scripts]
datasweeper = "datasweeper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
