[project]
name = "datasweeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DoniaBatool", email = "donia1510aptech@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fpdf>=1.7.2",
    "googletrans==4.0.0rc1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "pytesseract>=0.3.13",
    "reportlab>=4.3.1",
    "seaborn>=0.13.2",
    "streamlit>=1.42.2",
    "xlsxwriter>=3.2.2",
]

[project.scripts]
datasweeper = "datasweeper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
